[package]
name = "sources"
version = "0.1.0"
authors = ["Matt Schulte <mschulte@wyze.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
compiledfiles = "0.6.0"